Finalizaicón de: - navbar - home - autor

--- a/pages/autor.html
+++ b/pages/autor.html
@@ -26,16 +26,34 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="./autor.html">El autor</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">La trilogía</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Eventos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./trilogia.html">La trilogía</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./eventos.html">Eventos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <main>
-        <h1>Autor</h1>
+        <div class="autor_div">
+            <div><img src="../resources/men.jpg" alt="foto autor"></div>
+            <div class="autor_div_text">
+                <h1>Rodolfo Salgado</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non commodi rerum quasi provident nobis est
+                    repellendus, blanditiis consectetur, inventore maiores, quos recusandae impedit velit deserunt enim.
+                    Quaerat, suscipit tenetur? Assumenda ducimus quibusdam, nemo perspiciatis unde recusandae facilis
+                    exercitationem, aliquam aut iste mollitia laborum accusamus maiores tempore non eum molestiae quae!
+                </p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim vero, natus illo ipsum maiores harum
+                    nostrum rem dolorum deserunt illum culpa tempora totam voluptas, porro inventore quisquam! Provident
+                    amet unde adipisci cumque aut inventore reprehenderit harum dolorum, est rerum eum ducimus et
+                    dignissimos tenetur? Eveniet optio eaque dolor saepe. Itaque harum aperiam in perferendis sapiente
+                    veniam corrupti ex vitae exercitationem, odit ab quaerat nemo soluta quos minus doloremque placeat
+                    animi velit debitis voluptas eligendi dolorum nulla non? Quis quae delectus nobis minima
+                    reprehenderit odit. Dolorum ratione porro, excepturi vitae ad sequi ab, ipsum veritatis rerum, animi
+                    facere quia iste maxime?</p>
+            </div>
+        </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
