--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paradigmas Perdidos</title>
+    <title>Contacto</title>
     <!-- BOOSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
 <body>
     <!-- NAVBAR https://getbootstrap.com/docs/5.3/components/navbar/ -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html">PARADIGMAS PERDIDOS</a>
+            <a class="navbar-brand" href="../index.html">PARADIGMAS PERDIDOS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -24,28 +24,19 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./pages/autor.html">El autor</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./pages/trilogia.html">La trilogía</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./pages/eventos.html">Eventos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./autor.html">El autor</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./trilogia.html">La trilogía</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./eventos.html">Eventos</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="./contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <main class="home_main">
-        <div>
-            <h1>Frase marketinera</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, corrupti, autem.</p>
-            <button>Comprar ahora</button>
-        </div>
+    <main>
+        <h1>Contacto</h1>
     </main>
-
-    <footer>
-        <p>© 2024 DRAGONSTEEL ENTERTAINMENT®, LLC.</p>
-        
-    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
