- Trilogía terminado - Inicio de contacto y eventos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,15 +28,41 @@
                     <li class="nav-item"><a class="nav-link" href="./autor.html">El autor</a></li>
                     <li class="nav-item"><a class="nav-link" href="./trilogia.html">La trilogía</a></li>
                     <li class="nav-item"><a class="nav-link" href="./eventos.html">Eventos</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="./contacto.html">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page"
+                            href="./contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <main>
-        <h1>Contacto</h1>
+    <main class="general_main">
+        <div class="contacto_body">
+            <div class="contacto_text">
+                <h2>Puntos de venta</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos consequuntur reiciendis dicta error aut
+                    inventore placeat cumque, voluptas numquam dolorem repellendus explicabo porro ad corporis ipsam,
+                    recusandae sit mollitia amet corrupti. Voluptas fugit, error aliquid odit cumque voluptatum
+                    molestiae
+                    atque.</p>
+            </div>
+            <div>
+                <!-- Bootstrap form -->
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1"
+                        placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+            </div>
+        </div>
     </main>
+
+    <footer>
+        <p>© 2024 DRAGONSTEEL ENTERTAINMENT®, LLC.</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
