--- a/pages/trilogia.html
+++ b/pages/trilogia.html
@@ -27,7 +27,8 @@
                     <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="./autor.html">El autor</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="./trilogia.html">La trilogía</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="./trilogia.html">La
+                            trilogía</a></li>
                     <li class="nav-item"><a class="nav-link" href="./eventos.html">Eventos</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
                 </ul>
@@ -35,9 +36,44 @@
         </div>
     </nav>
 
-    <main>
-        <h1>Trilogia</h1>
+    <main class="trilogia_main">
+        <div class="trilogia_div">
+            <!-- Cards Bootstrap -->
+            <div class="card" style="width: 18rem;">
+                <img src="../resources/tapa_libro_1.png" class="card-img-top" alt="Tapa libro 1">
+                <div class="card-body">
+                    <h5 class="card-title">Libro 1</h5>
+                    <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil amet
+                        perspiciatis architecto nam expedita neque laborum nobis aperiam. Labore, nemo!</p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../resources/tapa_libro_2.png" class="card-img-top" alt="Tapa libro 2">
+                <div class="card-body">
+                    <h5 class="card-title">Libro 2</h5>
+                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, ut dolorem laborum veniam corporis illo voluptatum natus reprehenderit adipisci sapiente, error, magnam nostrum neque.</p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../resources/tapa_libro_3.png" class="card-img-top" alt="Tapa libro 3">
+                <div class="card-body">
+                    <h5 class="card-title">Libro 3</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, odit suscipit nihil beatae voluptatum assumenda vero tempora autem.</p>
+                </div>
+            </div>
+            <!-- <div class="card_libros">
+                <img src="../resources/tapa_libro_1.png" alt="libro 1">
+                <div>
+                    <h2>Libro 1</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique totam vitae explicabo laboriosam nesciunt nisi aliquid quisquam sunt incidunt a distinctio possimus, labore deleniti consequatur. Dolores aliquam facere incidunt reiciendis?</p>
+                </div>
+            </div> -->
+        </div>
     </main>
+
+    <footer>
+        <p>© 2024 DRAGONSTEEL ENTERTAINMENT®, LLC.</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
