--- a/pages/autor.html
+++ b/pages/autor.html
@@ -56,6 +56,10 @@
         </div>
     </main>
 
+    <footer>
+        <p>© 2024 DRAGONSTEEL ENTERTAINMENT®, LLC.</p>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
