--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -38,6 +38,10 @@
         <h1>Eventos</h1>
     </main>
 
+    <footer>
+        <p>© 2024 DRAGONSTEEL ENTERTAINMENT®, LLC.</p>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
