--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -27,15 +27,46 @@
                     <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="./autor.html">El autor</a></li>
                     <li class="nav-item"><a class="nav-link" href="./trilogia.html">La trilogía</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="./eventos.html">Eventos</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page"
+                            href="./eventos.html">Eventos</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <main>
-        <h1>Eventos</h1>
+    <main class="general_main">
+        <h2>Próximos eventos</h2>
+        <section class="eventos-proximos_section">
+            <div class="eventos_card">
+                <h3>Evento 1</h3>
+                <p>Martes 23 abril</p>
+                <p class="subinfo">20:00 hs.</p>
+            </div>
+            <div class="eventos_card">
+                <h3>Evento 2</h3>
+                <p>Martes 23 abril</p>
+                <p class="subinfo">20:00 hs.</p>
+            </div>
+            <div class="eventos_card">
+                <h3>Evento 3</h3>
+                <p>Martes 23 abril</p>
+                <p class="subinfo">20:00 hs.</p>
+            </div>
+            <div class="eventos_card">
+                <h3>Evento 4</h3>
+                <p>Martes 23 abril</p>
+                <p class="subinfo">20:00 hs.</p>
+            </div>
+            <div class="eventos_card">
+                <h3>Evento 5</h3>
+                <p>Martes 23 abril</p>
+                <p class="subinfo">20:00 hs.</p>
+            </div>
+        </section>
+        <div>
+
+        </div>
     </main>
 
     <footer>
