--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -37,7 +37,7 @@
 
     <main class="general_main">
         <div class="contacto_body">
-            <div class="contacto_text">
+            <div>
                 <h2>Puntos de venta</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos consequuntur reiciendis dicta error aut
                     inventore placeat cumque, voluptas numquam dolorem repellendus explicabo porro ad corporis ipsam,
@@ -45,7 +45,7 @@
                     molestiae
                     atque.</p>
             </div>
-            <div>
+            <div class="contacto_form">
                 <!-- Bootstrap form -->
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Email address</label>
